<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <com.google.android.material.card.MaterialCardView
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/baseline_component_align"
            android:layout_marginTop="@dimen/baseline_component_align"
            android:layout_marginBottom="@dimen/baseline_component_align"
            android:layout_width="match_parent"
            style="@style/OrgCardView"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_cardview_layout"
                android:padding="@dimen/baseline_component_align"
                >

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/item_imageview"
                    android:contentDescription="@string/item_image_description"
                    android:layout_height="0dp"
                    android:layout_width="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.3"
                    app:shapeAppearanceOverlay="@style/roundedCorners"
                    tools:src="@drawable/ic_image_not_found"
                    />

                <LinearLayout
                    android:id="@+id/item_information"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:paddingTop="@dimen/padding_space"
                    android:paddingStart="@dimen/padding_space"
                    android:paddingBottom="@dimen/padding_space"
                    app:layout_constraintStart_toEndOf="@id/item_imageview"
                    app:layout_constraintEnd_toStartOf="@id/button_layout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="vertical"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:id="@+id/item_name_textview"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        tools:text="@string/item_name"
                        style="@style/NameCardView"
                        tools:ignore="RtlSymmetry"
                        />

                    <TextView
                        android:id="@+id/item_description_textview"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingBottom="@dimen/padding_space"
                        tools:text="@string/item_description"
                        style="@style/DescriptionCardView"
                        />

                    <TextView
                        android:id="@+id/item_price_textview"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:paddingTop="@dimen/padding_space"
                        tools:text="@string/item_price"
                        style="@style/PriceCardView"
                        />

                    <TextView
                        android:id="@+id/item_quantity_textview"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        tools:text="@string/item_quantity"
                        style="@style/QuantityCardView"
                        />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/button_layout"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:id="@+id/edit_button"
                        android:contentDescription="@string/item_edit_button"
                        android:layout_height="@dimen/touchable_icon_height"
                        android:layout_weight="1"
                        android:layout_width="@dimen/touchable_icon_height"
                        android:padding="@dimen/padding_space"
                        android:layout_marginBottom="@dimen/baseline_component_align"
                        android:src="@drawable/ic_edit_item"
                        />

                    <ImageView
                        android:id="@+id/remove_button"
                        android:contentDescription="@string/item_remove_button"
                        android:layout_height="@dimen/touchable_icon_height"
                        android:layout_weight="1"
                        android:layout_width="@dimen/touchable_icon_height"
                        android:padding="@dimen/padding_space"
                        android:src="@drawable/ic_remove_item"
                        tools:ignore="RedundantDescriptionCheck"
                        />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>
